# okrs-git-hook

./: .gitignore  dev.opam  dev.opam.locked  dune-project  flake.nix  hook.opam  hook.opam.locked  readme.md
.github/workflows/: release.yml
nix/: default.nix
scripts/: commit-msg  install.sh
src/: dune  main.ml
