(executable
 (name main)
 (public_name hook)
 (package hook)
 (libraries
  str
  re
  re.pcre
  lwt
  cohttp
  cohttp-lwt-unix
  yojson
  ppx_deriving_yojson.runtime)
 (preprocess
  (pps ppx_deriving_yojson)))

(env
 (static
  (flags
   (:standard -ccopt -static))
  (ocamlopt_flags
   (:standard -O3 -unbox-closures)))
 (release
  (ocamlopt_flags
   (:standard -O3 -unbox-closures))))
